added JPA for Item and DTO for user and item