@@ -1,10 +1,9 @@
 package com.example.demo.entity;
 
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
 import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import jakarta.persistence.Column;
@@ -13,11 +12,15 @@ import jakarta.persistence.GeneratedValue;
 import jakarta.persistence.GenerationType;
 import jakarta.persistence.Id;
 import jakarta.persistence.Table;
+import lombok.AllArgsConstructor;
 import lombok.Data;
+import lombok.NoArgsConstructor;
 
+@NoArgsConstructor
+@AllArgsConstructor
 @Entity
-@Table(name="users")
 @Data
+@Table(name="users")
 public class UserDetail implements UserDetails{
 	
 	/**
@@ -26,7 +29,7 @@ public class UserDetail implements UserDetails{
 	private static final long serialVersionUID = 3786895188444661441L;
 
 	@Id
-	@Column(name = "ID")
+	@Column(name = "id")
 	@GeneratedValue(strategy = GenerationType.AUTO)
 	Long id;
 
@@ -53,7 +56,7 @@ public class UserDetail implements UserDetails{
 
 	@Override
 	public Collection<? extends GrantedAuthority> getAuthorities() {
-		return List.of(new SimpleGrantedAuthority(role));
+        return Collections.emptyList();
 	}
 	
 	
